// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiTourStepIndicator can be complete 1`] = `
<li
  aria-label="aria-label"
  class="euiTourStepIndicator testClass1 testClass2 emotion-EuiTourStepIndicator-euiTestCss"
  data-test-subj="test subject string"
>
  <span
    color="#A2B1C9"
    data-euiicon-type="dot"
  >
    complete
  </span>
</li>
`;

exports[`EuiTourStepIndicator can be incomplete 1`] = `
<li
  aria-label="aria-label"
  class="euiTourStepIndicator testClass1 testClass2 emotion-EuiTourStepIndicator-euiTestCss"
  data-test-subj="test subject string"
>
  <span
    color="#A2B1C9"
    data-euiicon-type="dot"
  >
    incomplete
  </span>
</li>
`;

exports[`EuiTourStepIndicator is rendered 1`] = `
<li
  aria-label="aria-label"
  class="euiTourStepIndicator testClass1 testClass2 emotion-EuiTourStepIndicator-euiTestCss"
  data-test-subj="test subject string"
>
  <span
    aria-current="step"
    color="#008A5E"
    data-euiicon-type="dot"
  >
    active
  </span>
</li>
`;
